@@ -67,7 +67,7 @@ public:
 	std::vector<_tWebUserPassword> m_users;
 
 	//JSon
-	void GetJSonDevices(Json::Value &root, const std::string &rused, const std::string &rfilter, const std::string &order, const std::string &rowid, const std::string &planID);
+	void GetJSonDevices(Json::Value &root, const std::string &rused, const std::string &rfilter, const std::string &order, const std::string &rowid, const std::string &planID, const bool bDisplayHidden);
 private:
 	void HandleCommand(const std::string &cparam, Json::Value &root);
 
