@@ -20,6 +20,7 @@ Version 1.0.xxxx (April xxth 2014)
 - Implemented: Added Fibaro Motion Sensor (0800/1001) to the openzwave manufacturer file
 - Changed: startup script now compatible with new ubuntu pidofproc
 - Fixed: Hardware Setup, motherboard sensors can now be enabled/disabled
+- Implemented: Option to hide devices (placing a $ in front of the name, or the new special roomplan)
 
 Version 1.0.1680 (April 21th 2014)
 - Implemented: Support for Forecast.io
